--- a/src/Styles/FlowGraph.scss
+++ b/src/Styles/FlowGraph.scss
@@ -13,7 +13,7 @@
     width: 200000px;
     height: 200000px;
 
-    background-color:rgb(93, 93, 93);
+    background-color: rgb(93, 93, 93);
     background-image: linear-gradient(rgba(56, 56, 56, .1) 2px, transparent 1px),
     linear-gradient(90deg, rgba(56, 56, 56, .1) 2px, transparent 1px),
     linear-gradient(rgb(89, 89, 89) 1px, transparent 1px),
@@ -36,12 +36,18 @@
   }
 
   & > .workspace {
-    position: relative;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100000px;
+    height: 100000px;
+    pointer-events: none;
 
     & > .node {
       position: absolute;
-      box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
       border-radius: 6px;
+      pointer-events: all;
 
       & > .container {
         display: flex;
@@ -63,7 +69,9 @@
           border-bottom: 1px solid rgba(0, 0, 0, 0.25);
           height: 48px;
 
-          * { pointer-events: none; }
+          * {
+            pointer-events: none;
+          }
 
           & > .header-icon {
             width: 32px;
@@ -82,15 +90,16 @@
 
             & > .header-title {
               font-family: arial, sans-serif;
-              font-size: 14px;
-              color: #000;
+              font-size: 13px;
+              font-weight: 600;
+              color: #222;
               padding: 0 10px;
             }
 
             & > .header-sub-title {
               font-family: arial, sans-serif;
               font-size: 10px;
-              color: #000;
+              color: #333;
               padding: 0 10px;
             }
           }
@@ -117,7 +126,7 @@
             justify-content: flex-start;
             align-items: flex-start;
 
-            & input[type="text"],& input[type="number"],& select {
+            & input[type="text"], & input[type="number"], & select {
               background: rgba(125, 125, 125, .5);
               border: 1px solid rgba(0, 0, 0, .5);
               padding: 2px;
@@ -145,9 +154,10 @@
               justify-content: flex-start;
               margin-right: 12px;
             }
+
             &.socket-output {
               justify-content: flex-end;
-              margin-left:24px;
+              margin-left: 24px;
             }
 
             & > .socket-icon {
@@ -172,7 +182,103 @@
   }
 }
 
-.test {
+.flow-graph--fuzzy-finder {
   position: absolute;
-  background: #f00;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  z-index: 999;
+  background: rgba(200, 200, 200, 0.5);
+  backdrop-filter: blur(5px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  border: 1px solid rgba(100, 100, 100, .65);
+  border-radius: 6px;
+  border-top: 1px solid rgba(255, 255, 255, .35);
+
+  width: 250px;
+  height: 320px;
+
+  & > input {
+    color: #fff;
+    font-family: monospace;
+    font-size: 12px;
+    font-weight: 300;
+    outline: none;
+    padding: 0 12px;
+    line-height: normal;
+    background: #3a3a3a;
+    border: #0e0e0e;
+    border-radius: 3px;
+    margin: 4px;
+    width: calc(100% - 32px);
+    height: 24px;
+    box-shadow: inset 0 -1px 1px rgba(255, 255, 255, .1);
+  }
+
+  & > .fgff-search-results {
+    overflow-x: hidden;
+    overflow-y: scroll;
+    width: calc(100% - 10px);
+    height: calc(100% - 10px);
+    border-top: 1px solid rgba(100, 100, 100, 0.5);
+    border-radius: 0 0 6px 6px;
+    padding: 5px;
+    font-family: Arial, sans-serif;
+    font-size: 11px;
+    color: #111;
+
+    & > .fgff-search-item {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+      margin-bottom: 6px;
+      padding: 2px 1px;
+      transition: 0.15s;
+
+      & > .fgff-icon {
+        width: 24px;
+        height: 24px;
+        background-size: 18px 18px;
+        background-position: center;
+        background-repeat: no-repeat;
+        margin-right: 10px;
+      }
+
+      & > .fgff-item {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        width: 100%;
+
+        & > .fgff-name {
+          font-size: 11px;
+        }
+        & > .fgff-sys-name {
+          font-size: 10px;
+          color: #444;
+        }
+      }
+
+      &:hover {
+        background: rgba(255, 255, 255, .75);
+        cursor: pointer;
+      }
+    }
+
+    &::-webkit-scrollbar {
+      width: 8px;
+    }
+
+    &::-webkit-scrollbar-track {
+      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    }
+
+    &::-webkit-scrollbar-thumb {
+      border-radius: 8px;
+      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+    }
+  }
 }
